--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,18 +16,30 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.5",
-    "Programming Language :: Python :: 3.6",
-    "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
-requires-python = ">=3.5"
+requires-python = ">=3.8"
+dependencies = [
+    "certifi==2023.5.7 ; python_version >= '3.6'",
+    "charset-normalizer==3.1.0 ; python_full_version >= '3.7.0'",
+    "idna==3.4 ; python_version >= '3.5'",
+    "lxml==4.9.2",
+    "numpy==1.25.0 ; python_version >= '3.10'",
+    "pandas==2.0.3",
+    "python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'",
+    "pytz==2023.3",
+    "requests==2.31.0",
+    "six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'",
+    "tzdata==2023.3 ; python_version >= '2'",
+    "urllib3==2.0.3 ; python_version >= '3.7'"
+]
 
 [project.urls]
 homepage = "https://github.com/JacobLee23/UCSD-AS-One"
 
 [tool.setuptools.packages.find]
 where = ["."]
-include = ["asiga*"]
+include = ["asiga"]
